# simplefe

./: README.md  package.json  tsconfig.json  webpack.config.js
scripts/: sass-watcher.js
src/: index.html  index.ts
src-tauri/: Cargo.toml  installer.wxs  tauri.conf.json
src-tauri/src/: drives.rs  extractIcon.ps1  file_lib.rs  files_api.rs  foo.json  main.rs  storage.rs
src/Components/ContextMenu/: contextMenu.scss  contextMenu.ts
src/Components/ContextMenu/configs/: bodyMenu.config.ts  fileMenu.config.ts
src/Components/Drives/: drives.scss  drives.ts
src/Components/Favorites/: favorites.ts
src/Components/Files/: files.scss
src/Components/Files/File Operation/: search.ts  select.ts
src/Components/Files/File Preview/: preview.scss  preview.ts
src/Components/Functions/: lazyLoadingImage.ts
src/Components/Functions/Loading/: loading.scss  loading.ts
src/Components/Functions/path/: joinPath.test.ts  joinPath.ts
src/Components/Layout/: hover.ts  layout.scss  resizer.ts  tab.ts
src/Components/Open/: displayFiles.ts  open.ts
src/Components/Properties/: properties.scss  properties.ts  tokei.scss  tokei.ts
src/Components/Setting/: setting.ts
src/Components/Setting/About/: about.ts
src/Components/Setting/Appearance/: Appearance.ts
src/Components/Setting/Preference/: preference.ts
src/Components/Theme/: theme.json  theme.ts
src/Locales/: index.json  zh-CN.json
src/Public/: style.scss
src/Service/: files.ts  window.ts
